--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -34,7 +34,7 @@
   width: 70%; }
 
 .Navbarz {
-  background-color: var(--color-primary-1);
+  background-color: var(--color-grey-dark-1);
   border-bottom: var(--line);
   padding-top: 0rem !important;
   padding-bottom: 0rem !important;
@@ -46,9 +46,11 @@
     .Navbarz__Link__img {
       margin: 0px !important; }
   .Navbarz__List {
-    color: black;
+    color: var(--color-primary-2);
     padding-top: 20px !important;
     padding-bottom: 20px !important; }
+    .Navbarz__List__Button {
+      height: 5rem !important; }
     .Navbarz__List:hover {
       color: white !important;
       background-color: #e5b721;
@@ -212,14 +214,14 @@
 .product {
   background-color: var(--color-primary-3); }
 
-.HomeContainer {
-  background-color: var(--color-grey-dark-1);
-  color: white !important;
-  margin: 0rem !important; }
-
 .carouselHome {
   width: 100%;
   height: 25rem; }
+
+.NavTabsHome {
+  background-color: var(--color-grey-dark-1);
+  color: white !important;
+  margin: 0rem !important; }
 
 .TabsHome {
   width: 25% !important;
@@ -255,46 +257,45 @@
 .dropz {
   width: 8rem !important;
   height: 5rem !important; }
+  .dropz:hover {
+    color: black !important;
+    background-color: var(--color-primary-2); }
   .dropz__img {
     width: 6rem;
     height: 3rem; }
   .dropz__item {
     min-width: 0rem !important;
     width: 8rem !important;
-    display: flex;
-    flex-direction: column;
     text-align: center !important; }
     .dropz__item:hover {
       color: black !important;
       background-color: var(--color-primary-2); }
-    .dropz__item__nominal {
-      width: 33.3%; }
 
-.HomeBanner2 {
+.BannerText1 {
   height: 15rem;
   width: 100%;
   margin: 0rem !important;
   background-color: var(--orange); }
-  .HomeBanner2__text1 {
+  .BannerText1__text1 {
     font-size: 2rem;
     padding: 2rem;
     margin: 0rem !important; }
-  .HomeBanner2__text2 {
+  .BannerText1__text2 {
     font-size: 1rem;
     padding-right: 2rem;
     padding-left: 2rem;
     margin: 0rem !important; }
 
-.HomeBanner3 {
+.BannerText2 {
   height: 15rem;
   width: 100%;
   margin: 0rem !important;
   background-color: var(--danger); }
-  .HomeBanner3__text1 {
+  .BannerText2__text1 {
     font-size: 2rem;
     padding: 2rem;
     margin: 0rem !important; }
-  .HomeBanner3__text2 {
+  .BannerText2__text2 {
     font-size: 1rem;
     padding-right: 2rem;
     padding-left: 2rem;
