--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -1,11 +1,12 @@
 .Navbarz {
-    background-color: var(--color-primary-1);
+    background-color: var(--color-grey-dark-1);
     border-bottom: var(--line);
     padding-top: 0rem !important;
     padding-bottom: 0rem !important;
     padding-left: 1rem !important;
     padding-right: 1rem !important;
     font-size: 2rem;
+    border-bottom: 0.5rem solid var(--color-primary-2);
 
     &__Link {
       padding: 5px;
@@ -14,28 +15,40 @@
       }
     }
 
+    &__Right{
+      margin: 0rem !important;
+      padding: 0rem !important;
+    }
+    &__Button{
+      padding: 5px !important;
+      margin: 20px !important;
+      justify-content: center;
+      &__img{
+        width: 25px;
+        height: 25px;
+      }
+    }
+
     &__List {
-      color: black;
+      color: var(--color-primary-2) !important;
       padding-top: 20px !important;
-      padding-bottom: 20px !important;
 
       &:hover {
         color: white !important;
         background-color: #e5b721;
-        padding-top: 20px !important;
-        padding-bottom: 20px !important;
+        height: 100%;
+        width: 100%;
       }
     }
     &__ContactUs{
-      color:black;
+      color: var(--color-primary-2) !important;
       margin-right: 20px;
       padding-top: 20px !important;
       padding-bottom: 20px !important;
       &:hover {
         color: white !important;
         background-color: #e5b721;
-        padding-top: 20px !important;
-        padding-bottom: 20px !important;
+        height: 100%;
       }
     }
 }
