--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,14 +24,16 @@
   background-color: var(--color-grey-dark-1);
   transform: translateY(-3px); }
 
-.copyright {
-  font-size: 1.4rem;
-  color: var(--color-footer-text);
-  margin-top: 6rem;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  width: 70%; }
+.footerz2 {
+  background-color: var(--color-primary-2);
+  height: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center; }
+  .footerz2__copyright {
+    font-size: 1rem;
+    color: var(--color-footer); }
 
 .Navbarz {
   background-color: var(--color-grey-dark-1);
