--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 .footerz {
   background-color: var(--color-footer);
   grid-column: full-start / full-end;
-  padding: 8rem; }
+  padding: 5rem; }
 
 .navfooter {
   list-style: none;
@@ -16,7 +16,7 @@
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
-  padding: 1.5rem;
+  padding: .25rem;
   display: block;
   transition: all .2s; }
 
@@ -24,16 +24,15 @@
   background-color: var(--color-grey-dark-1);
   transform: translateY(-3px); }
 
-.footerz2 {
-  background-color: var(--color-primary-2);
-  height: 5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.SocialMedia {
+  color: var(--color-primary-1);
   text-align: center; }
-  .footerz2__copyright {
-    font-size: 1rem;
-    color: var(--color-footer); }
+
+.footerz2 {
+  font-size: 1.4rem;
+  color: var(--color-primary-3);
+  background-color: var(--color-primary-2);
+  text-align: center; }
 
 .Navbarz {
   background-color: var(--color-grey-dark-1);
