--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -2,6 +2,7 @@
 @import "components/container";
 @import "components/footer";
 @import "components/navbar";
+@import "components/header";
 
 //pages
 @import "pages/landingpage";
