--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -75,6 +75,45 @@
       background-color: #e5b721;
       height: 100%; }
 
+.HeaderTop {
+  background-color: #3E3E3E;
+  border-bottom: 4px solid #FFCD05; }
+  .HeaderTop__Right {
+    display: flex;
+    flex-direction: column;
+    align-items: center !important;
+    margin: 0rem !important;
+    padding: 0rem !important; }
+  .HeaderTop__Button {
+    padding: 5px !important;
+    margin: 20px !important;
+    justify-content: center; }
+    .HeaderTop__Button__img {
+      width: 25px;
+      height: 25px; }
+  .HeaderTop__Button {
+    height: 40px;
+    width: 191px;
+    border: 2px solid #FFCD05;
+    box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5); }
+  .HeaderTop__List {
+    color: var(--color-primary-2) !important;
+    padding-top: 20px !important; }
+    .HeaderTop__List:hover {
+      color: white !important;
+      background-color: #e5b721;
+      height: 100%;
+      width: 100%; }
+  .HeaderTop__ContactUs {
+    color: var(--color-primary-2) !important;
+    margin-right: 20px;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important; }
+    .HeaderTop__ContactUs:hover {
+      color: white !important;
+      background-color: #e5b721;
+      height: 100%; }
+
 .Bar-First {
   margin: 0rem !important;
   padding: 0rem !important; }
@@ -268,7 +307,7 @@
     background-color: var(--color-primary-3) !important; }
 
 .dropz {
-  width: 8rem !important;
+  width: 10rem !important;
   height: 5rem !important; }
   .dropz:hover {
     color: black !important;
@@ -354,25 +393,43 @@ body {
 .col-sm-6 {
   padding-right: 0; }
 
-.logo {
-  height: 4rem;
+.BoxAladinLogo-Big {
+  height: 50px;
+  width: 200px;
   margin: 2rem; }
 
+.DropdownUser {
+  height: 50px !important;
+  width: 200px !important;
+  margin: 2rem !important;
+  border-radius: 4px;
+  background-color: #FFCD05 !important; }
+
 :root {
-  --color-primary-1: #f2f3ee;
-  --color-primary-2: #e5b721;
-  --color-primary-3: #221f1f;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-  --color-container-1: #ffbe76;
-  --color-container-2: #f0932b;
-  --color-footer: #101d2c;
-  --color-footer-text: #aaa;
+  --color-yellow-1: #FFCD05;
+  --color-yellow-2: #FEC40C;
+  --color-yellow-3: #F5A623;
+  --color-yellow-4: #ffc300;
+  --color-dark-1: #171717;
+  --color-dark-2: #2f2f2f;
+  --color-dark-3: #3e3e3e;
+  --color-dark-4: #4a4a4a;
+  --color-white: #ffffff;
+  --color-grey-1: #989898;
+  --color-grey-2: #979797;
+  --color-grey-3: #D8D8D8;
+  --color-grey-4: #f2f2f3;
+  --color-grey-5: #3E3E3E;
+  --color-grey-6: #BBBBBB;
+  --color-grey-7: #000000;
+  --color-grey-8: #959493;
+  --color-grey-8: #BABABA;
+  --color-blue-1: #4A90E2;
+  --color-blue-2: #3C5193;
+  --color-red-1: #ED3014;
+  --color-red-2: #F34817;
+  --color-red-3: #D0021B;
+  --color-red-4: #DA4733;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --line: 1px solid var(--color-grey-light-2); }
