--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -23,36 +23,21 @@
     	height: 40px;
     	width: 200px;
     	border: 2px solid #FFCD05;
+      color: #FFCD05;
+      background-color: #3E3E3E;
     	box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
     	font-family: Raleway;
     	font-size: 22px;
     	font-weight: 600;
     	line-height: 21px;
     	text-align: center;
+      margin-right: 20px !important;
       &__label{
       	font-size: 18px;
         &__italic{
           font-size: 18px;
           font-style: italic;
         }
-      }
-    }
-    &__ButtonLogin{
-      height: 40px;
-      width: 150px !important;
-      background-color: #FFCD05 !important;
-
-      &__label{
-      	color: #3E3E3E;
-      	font-family: Raleway;
-      	font-size: 22px;
-      	font-weight: 800;
-      	letter-spacing: 1px;
-        margin: 2px;
-      }
-      &__icon{
-        width: 25px !important;
-        height: 25px !important;
       }
     }
 
@@ -78,4 +63,32 @@
         height: 100%;
       }
     }
+}
+
+
+.ButtonLogin{
+  width: 150px;
+  height: 40px;
+  padding-left: 15px !important;
+  padding-top: 0px !important;
+  border-radius: 10px !important;
+  background-color: #FFCD05 !important;
+  display: flex !important;
+  align-items: center !important;
+
+  color: #3E3E3E !important;
+  font-family: Raleway !important;
+  font-size: 22px !important;
+  font-weight: 800 !important;
+  letter-spacing: 1px !important;
+  margin: 10px !important;
+
+  &__icon1{
+    width: 25px !important;
+    height: 25px !important;
+  }
+  &__icon2{
+    width: 25px !important;
+    height: 25px !important;
+  }
 }
