--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -7,8 +7,8 @@
 
 //for page home component TabsHome
 .NavTabsHome{
-  background-color: var(--color-grey-dark-1);
-  color: white !important;
+  background-color: var(--color-dark-3);
+  color: var(--color-yellow-1) !important;
   margin: 0rem !important;
 }
 .TabsHome{
@@ -16,6 +16,12 @@
   height: 5rem !important;
   text-align: center !important;
   margin: 0rem !important;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 900;
+  letter-spacing: 1px;
+  line-height: 11px;
+  text-align: center;
 
   &__link{
     height: 100%;
@@ -27,6 +33,11 @@
       color: black !important;
       background-color: var(--color-primary-2);
     }
+  }
+
+  &__icon1{
+    height: 40px;
+    width: 20px;
   }
 }
 
