--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -28,10 +28,10 @@
     display: flex !important;
     flex-direction: column !important;
     justify-content: center !important;
-    border: 0.25rem solid var(--color-primary-3) !important;
+    border: 1px solid #979797 !important;
     &:hover{
       color: black !important;
-      background-color: var(--color-primary-2);
+      background-color: var(--color-yellow-1);
     }
   }
 
@@ -45,7 +45,11 @@
   .TabsPane1{
     margin: 0rem;
     padding: 2rem;
-    background-color: var(--color-primary-2);
+    background-color: var;
+    &:hover{
+      color: black !important;
+      background-color: var(--color-yellow-1);
+    }
     &__text{
       font-size: 5rem !important;
       text-align: center !important;
@@ -68,10 +72,16 @@
     }
 
     &__button{
-      color: var(--color-primary-2) !important;
-      background-color: var(--color-primary-3) !important;
+      color: var(--color-yellow-1) !important;
+      background-color: #3e3e3e !important;
+      font-family: Raleway;
+      font-size: 24px!important;
+      font-weight: 800;
+      letter-spacing: 1px;
+      line-height: 29px;
+      text-align: center;
+      margin: 0rem;
     }
-
 
   }
 
@@ -102,48 +112,48 @@
 
 // for page home component banner text kok bisa lebih murah
 .BannerText1{
-  border-top: 0.25rem solid var(--color-primary-2) !important;
-  height: 20rem;
+  border-top: 0.25rem solid var(--color-yellow-1) !important;
+  height: 25rem;
   width: 100%;
   margin: 0rem !important;
-  background-color: var(--color-primary-3);
+  background-color: var(--color-grey-7);
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
 
   &__text1{
-    font-size: 2rem;
+    font-size: 4rem;
     padding: 2rem;
     margin: 0rem !important;
-    color: var(--color-primary-2);
+    color: var(--color-yellow-1);
     text-align: center;
   }
   &__text2{
     padding: 2rem;
     margin: 0rem !important;
     margin: 0rem !important;
-    font-size: 1rem;
-    color: var(--color-primary-1);
+    font-size: 1.5rem;
+    color: var(--color-grey-6);
   }
 }
 
 // for page home component banner text FAQ
 .BannerText2{
-  height: 15rem;
+  height: 25rem;
   width: 100%;
   margin: 0rem !important;
-  background-color: var(--color-primary-1);
+  background-color: var(--color-grey-6);
   color: var(--color-grey-dark-1);
   text-align: center;
 
   &__text1{
-    font-size: 2rem;
+    font-size: 4rem;
     padding: 2rem;
     margin: 0rem !important;
   }
   &__text2{
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding-right: 2rem;
     padding-left: 2rem;
     margin: 0rem !important;
