--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -25,10 +25,8 @@
 
   &__link{
     height: 100%;
-    display: flex !important;
-    flex-direction: column !important;
-    justify-content: center !important;
     border: 1px solid #979797 !important;
+
     &:hover{
       color: black !important;
       background-color: var(--color-yellow-1);
@@ -38,6 +36,10 @@
   &__icon1{
     height: 40px;
     width: 20px;
+    &:hover{
+      color: var(--color-yellow-1) !important;
+      background-color: var(--color-yellow-1);
+    }
   }
 }
 
