fixing dropdown header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -455,9 +455,6 @@ body {
   width: 200px;
   margin: 2rem; }
 
-.a {
-  background-color: #3E3E3E; }
-
 .DropdownUser {
   width: 150px;
   height: 40px;
@@ -486,9 +483,10 @@ body {
     line-height: 11px;
     text-align: center; }
   .DropdownUser__item {
-    width: 200px !important;
+    width: 150px !important;
     min-width: 0rem !important;
-    background-color: #FFCD05 !important; }
+    background-color: #FFCD05 !important;
+    border-radius: 10px !important; }
   .DropdownUser__inside {
     height: 50px !important;
     min-width: 0rem !important;
