--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -196,21 +196,21 @@
       align-content: center; }
 
 .AboutUs {
-  height: 100rem;
+  height: 75rem;
   width: 100%;
   background-color: var(--danger);
   display: flex;
   justify-content: center;
-  align-content: center; }
+  align-items: center; }
 
 .HowItWorks {
-  height: 100rem;
+  height: 75rem;
   width: 100%;
   background-color: var(--blue);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-content: center; }
+  align-items: center;
+  justify-content: center; }
 
 * {
   margin: 0;
@@ -264,103 +264,3 @@ body {
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --line: 1px solid var(--color-grey-light-2); }
-.Bar-Images {
-  width: 100%; }
-
-.Bar-Second {
-  background-color: var(--color-primary-2);
-  height: 10rem;
-  clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0); }
-
-.Bar-Second-Text {
-  font-size: 4rem;
-  color: var(--color-primary-1); }
-
-.Bar-Third {
-  background-color: var(--color-grey-dark-3);
-  height: 10rem;
-  clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0); }
-
-.Bar-Third-Img {
-  height: 5rem;
-  margin: 2.5rem; }
-
-.footerz {
-  background-color: var(--color-primary-3);
-  color: var(--color-grey-light-1);
-  padding: 2rem;
-  font-size: 2rem;
-  height: 15rem; }
-
-.headerz {
-  background-color: var(--color-primary-1);
-  border-bottom: var(--line);
-  font-size: 2rem; }
-
-.container {
-  width: 35rem;
-  padding: 5rem;
-  margin: 10rem;
-  background-color: var(--color-grey-light-1);
-  box-shadow: var(--shadow-dark); }
-  @media only screen and (max-width: 75em) {
-    .container {
-      margin: 0;
-      max-width: 100%;
-      width: 100%; } }
-
-.headerz {
-  background-color: var(--color-primary-1);
-  border-bottom: var(--line);
-  font-size: 2rem; }
-
-.content {
-  display: flex; }
-  @media only screen and (max-width: 56.25em) {
-    .content {
-      flex-direction: column; } }
-
-.sidebar {
-  background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; }
-
-.hotel-view {
-  background-color: #fff;
-  flex: 1; }
-
-.detail {
-  font-size: 1.4rem;
-  display: flex;
-  padding: 4.5rem;
-  background-color: var(--color-grey-light-1);
-  border-bottom: var(--line); }
-  @media only screen and (max-width: 56.25em) {
-    .detail {
-      padding: 3rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .detail {
-      flex-direction: column; } }
-
-.description {
-  background-color: #fff;
-  box-shadow: var(--shadow-light);
-  padding: 3rem;
-  flex: 0 0 60%;
-  margin-right: 4.5rem; }
-  @media only screen and (max-width: 56.25em) {
-    .description {
-      padding: 2rem;
-      margin-right: 3rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .description {
-      margin-right: 0;
-      margin-bottom: 3rem; } }
-
-.containerrr {
-  width: 50rem;
-  padding: 50rem;
-  margin: 10rem;
-  background-color: var(--color-primary-3); }
