--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,7 +134,7 @@
   width: 150px;
   height: 40px;
   padding-left: 15px;
-  padding-top: 3px;
+  padding-top: 0;
   border-radius: 10px;
   background-color: #FFCD05;
   display: flex;
@@ -145,15 +145,16 @@
   font-weight: 800;
   letter-spacing: 1px;
   margin: 10px; }
-  .ButtonLogin__icon1 {
+  .ButtonLogin__iconLogin {
     width: 17px !important;
     height: 25px !important; }
-  .ButtonLogin__icon2 {
+  .ButtonLogin__iconProfile {
     width: 15.219px !important;
     height: 25px !important; }
-
-.buttonProfile {
-  padding-top: 0; }
+  .ButtonLogin__Profile {
+    padding-top: 20px; }
+  .ButtonLogin__P {
+    padding-top: 20px; }
 
 .Bar-First {
   margin: 0rem !important;
