--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -70,7 +70,7 @@
   width: 150px;
   height: 40px;
   padding-left: 15px;
-  padding-top: 3px;
+  padding-top: 0;
   border-radius: 10px;
   background-color: #FFCD05;
   display: flex;
@@ -83,16 +83,19 @@
   letter-spacing: 1px;
   margin: 10px;
 
-  &__icon1{
+  &__iconLogin{
     width: 17px !important;
     height: 25px !important;
   }
-  &__icon2{
+  &__iconProfile{
     width: 15.219px !important;
     height: 25px !important;
   }
-}
-.buttonProfile{
-  padding-top: 0;
-}
 
+  &__Profile{
+    padding-top: 20px;
+  }
+  &__P{
+    padding-top: 20px;
+  }
+}
