--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -1,60 +1,54 @@
 .Login {
   display: flex;
   justify-content: center;
+  background-color: var(--color-grey-5);
+  color: var(--color-yellow-1);
+  text-align: center;
+  width: 750px;
 
-  &__container {
-    width: 40rem;
-    height: 100%;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
-    font-size: 2rem;
-    box-shadow: var(--shadow-dark);
+  &__Title1{
+    font-family: Raleway;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: center;
+    padding: 1rem;
+    margin-bottom: 2rem;
+  }
 
+  &__Title2{
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 24px;
+    text-align: center;
+  }
 
-    &__small{
-      font-size: 1rem;
-    }
+  &__Form{
+    text-align: left;
+  }
 
-    &__row1{
-      background-color: var(--color-container-1);
-      padding: 2rem;
-    }
+  &__LupaPassword{
+    color: var(--color-yellow-1);
+    font-style: italic;
+  }
 
-    &__icon{
-      height: 15rem;
-      align-items: center;
-   }
+  &__ButtonLogin{
+    color: var(--color-grey-5);
+    background-color: var(--color-yellow-1);
+    border-color: var(--color-yellow-1);
+    width: 100px;
+    height: 25px;
+    font-family: Raleway;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 16px;
+    text-align: center;
+    margin: 1rem;
+  }
 
-    &__form {
-      padding-top: 2rem;
-    }
-
-    &__row2{
-      background-color: var(--color-container-2);
-      margin-top: 0rem;
-    }
-
-    &__button{
-      padding-left: 2rem;
-      padding-right: 2rem;
-      padding-top: 4rem;
-      padding-bottom: 4rem;
-    }
-
-    &__row3{
-      background-color: var(--color-container-1);
-      color: var(--color-grey-light-1);
-      display: flex;
-      justify-content: center;
-    }
-
-    &__label{
-      padding-left: 1rem;
-      padding-right: 1rem;
-      padding-top: 2rem;
-      padding-bottom: 2rem;
-      align-content: center;
-    }
+  &__Daftar{
+    margin-bottom: 3rem;
   }
 
 }
