--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -4,7 +4,6 @@
   background-color: var(--color-grey-5);
   color: var(--color-yellow-1);
   text-align: center;
-  width: 750px;
 
   &__Title1{
     font-family: Raleway;
@@ -49,6 +48,13 @@
 
   &__Daftar{
     margin-bottom: 3rem;
+    color: var(--white);
+
+  }
+
+  &__Link{
+    color: var(--color-yellow-1);
+    font-style: italic;
   }
 
 }
